feat(auth): Implement complete authentication service with JWT and multi-database support
Features:
- Complete JWT authentication system with access and refresh tokens
- Multi-database configuration (PostgreSQL, Cassandra, Redis)
- User registration, login, logout, and token validation endpoints
- Token blacklist service for secure logout
- Refresh token rotation mechanism
- Voting status tracking integration
- OpenAPI/Swagger documentation
- Health check endpoints

Technical improvements:
- Dockerized application with optimized Dockerfile
- Comprehensive error handling and validation
- Security filters and JWT utilities
- Service layer separation with proper abstractions
- Database repository pattern implementation
- Configuration management for multiple environments

Database integration:
- PostgreSQL for user data and refresh tokens
- Cassandra for vote logging (prepared)
- Redis for caching and session management

Documentation:
- Updated README with setup instructions
- API documentation via Swagger/OpenAPI
- Environment configuration examples

Security enhancements:
- JWT token validation and blacklisting
- Secure password handling
- CORS configuration
- Authentication filters

Files changed:
- Modified: Dockerfile, README.md, pom.xml, application configs
- Updated: Controllers, services, security components
- Added: New DTOs, exceptions, models, repositories
- Removed: Test implementations and unused configs
- Enhanced: Docker compose configuration