@@ -1,66 +1,51 @@
 package com.auth.model;
 
 import jakarta.persistence.*;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Entity
 @Table(name = "users")
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
 public class User implements UserDetails {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     private UUID id;
 
-    @Column(name = "username", unique = true, nullable = false)
+    @Column(unique = true, nullable = false)
     private String username;
 
-    @Column(name = "email", unique = true, nullable = false)
-    private String email;
-
-    @Column(name = "full_name")
+    @Column(nullable = false)
     private String fullName;
 
-    @Column(name = "password", nullable = false)
+    @Column(nullable = false)
     private String password;
 
-    // Constructor vacío requerido por JPA
-    public User() {}
+    @Column
+    @Builder.Default
+    private String roles = "USER";
 
-    public User(String username, String email, String fullName, String password) {
-        this.username = username;
-        this.email = email;
-        this.fullName = fullName;
-        this.password = password;
-    }
+    @Column
+    private LocalDateTime createdAt;
 
-    public UUID getId() { return id; }
+    @Column
+    @Builder.Default
+    private boolean isActive = true;
 
-    public String getUsername() { return username; }
-
-    public void setUsername(String username) { this.username = username; }
-
-    public String getEmail() { return email; }
-
-    public void setEmail(String email) { this.email = email; }
-
-    public String getFullName() { return fullName; }
-
-    public void setFullName(String fullName) { this.fullName = fullName; }
-
-    public void setPassword(String password) { this.password = password; }
-
-    @Override
-    public String getPassword() { return password; }
-
-    // Métodos requeridos por UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // sin roles por ahora
+        return List.of(new SimpleGrantedAuthority("ROLE_" + roles));
     }
 
     @Override
@@ -73,5 +58,5 @@ public class User implements UserDetails {
     public boolean isCredentialsNonExpired() { return true; }
 
     @Override
-    public boolean isEnabled() { return true; }
+    public boolean isEnabled() { return isActive; }
 }
